--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -1,17 +1,21 @@
 @import "./_var.scss";
+
 body {
   width: 320px;
   margin: 0;
 }
+
 .nav__header-flex {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
   .img__icon-pazioli {
     margin-top: 32px;
     margin-left: 15.55px;
   }
 }
+
 .first-section p {
   color: rgba(133, 133, 133, 1);
   font-family: $Raleway;
@@ -19,6 +23,7 @@ body {
   text-align: center;
   margin-bottom: 30px;
 }
+
 h1 {
   font-family: $Abril;
   color: $black;
@@ -30,6 +35,7 @@ h1 {
   transform: scale(0.9, 1);
   margin-bottom: 40px;
 }
+
 .top__buttons--flex {
   display: flex;
   flex-direction: row;
@@ -46,6 +52,7 @@ h1 {
     letter-spacing: 0.1rem;
     border: none;
   }
+
   .sell-piano {
     width: 130px;
     height: 35px;
@@ -55,6 +62,7 @@ h1 {
     border-radius: $radius;
     letter-spacing: 0.1rem;
   }
+
   .piano-black {
     display: flex;
     justify-content: center;
@@ -63,15 +71,15 @@ h1 {
     position: relative;
   }
 }
+
 .new-model {
-  background: linear-gradient(
-    180deg,
-    #ffffff 0%,
-    rgba(0, 0, 0, 0.75) 37.19%,
-    rgba(0, 0, 0, 0.75) 76.04%,
-    #ffffff 100%
-  );
+  background: linear-gradient(180deg,
+      #ffffff 0%,
+      rgba(0, 0, 0, 0.75) 37.19%,
+      rgba(0, 0, 0, 0.75) 76.04%,
+      #ffffff 100%);
 }
+
 .second-section {
   video {
     margin: 0;
@@ -81,6 +89,7 @@ h1 {
     object-fit: cover;
     z-index: -1;
   }
+
   .second-section,
   h2 {
     font-family: $Abril;
@@ -89,6 +98,7 @@ h1 {
     letter-spacing: 0.1rem;
     display: flex;
   }
+
   .second-section,
   img {
     display: flex;
@@ -98,6 +108,7 @@ h1 {
     margin: auto;
   }
 }
+
 .description-second-section h3 {
   color: $white;
   text-align: center;
@@ -105,7 +116,8 @@ h1 {
   font-size: 24px;
   letter-spacing: 2px;
   margin-bottom: 2px;
-  + p {
+
+  +p {
     color: $white;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -117,17 +129,20 @@ h1 {
     font-weight: 400;
   }
 }
+
 .value {
   display: flex;
   flex-direction: row;
   justify-content: center;
   gap: 20px;
+
   p {
     font-family: $Raleway;
     color: $white;
     font-weight: 400;
     margin-bottom: 0px;
   }
+
   img {
     height: 17px;
     align-items: center;
@@ -135,6 +150,7 @@ h1 {
     padding-top: 15px;
   }
 }
+
 .description-second-section ul {
   display: flex;
   flex-direction: row;
@@ -145,16 +161,19 @@ h1 {
   font-weight: 400;
   color: $white;
   font-family: $Raleway;
+
   li:first-child {
     list-style: none;
     margin-bottom: 20px;
   }
 }
+
 .btn-second-section--flex {
   display: flex;
   flex-direction: row;
   justify-content: center;
   padding-bottom: 40px;
+
   button {
     width: 250px;
     height: 32px;
@@ -167,6 +186,7 @@ h1 {
     letter-spacing: 0.05rem;
   }
 }
+
 .btn-second-section {
   margin: auto;
   width: 228;
@@ -175,4 +195,100 @@ h1 {
   border: none;
   color: $white;
   border-radius: $radius;
+}
+
+.cards_section {
+  background: linear-gradient(180deg, rgba(245, 245, 245, 0) 0%, #F5F5F5 51.56%, rgba(245, 245, 245, 0) 100%);
+
+  .cards_section,
+  h2 {
+    text-align: center;
+    font-family: $Abril;
+    font-weight: 400;
+    font-size: 24px;
+    padding-left: 30px;
+    padding-right: 30px;
+    letter-spacing: 0.05rem;
+    margin-bottom: 40px;
+
+  }
+}
+
+.whitecard {
+  background-color: $FWhite;
+  width: 250px;
+  height: 350px;
+  margin-left: 32px;
+  margin-right: 32px;
+  border-radius: 8px;
+  box-shadow: 0px 28px 64px 12px rgba(0, 0, 0, 0.12);
+  margin-bottom: 30px;
+
+
+  .imagewhitecard {
+    padding-top: 1.5rem;
+    margin-left: 15px;
+    margin-right: 15px;
+    border-bottom: 1px dashed #DBDBDB;
+    padding-bottom: 15px;
+
+  }
+
+  .whitecardname {
+    margin-left: 15px;
+    font-family: $Abril;
+    letter-spacing: 0.05rem;
+    font-size: 16px;
+
+  }
+
+  .whitelist {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-left: 15px;
+    padding-right: 15px;
+    font-size: 12px;
+    font-family: $Raleway;
+    letter-spacing: 0.05rem;
+    margin-bottom: 20px;
+
+    li:first-child {
+      list-style: none;
+    }
+  }
+
+  .whitecost {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    gap: 0px;
+    height: 10px;
+    overflow:unset;
+    height: 50px;
+    margin-left: 20px;
+    
+    p{
+      border: solid 1px;
+      border-radius: $radius;
+      margin: 0;
+      width: 150px;
+      height: 20px;
+      text-align: center;
+      vertical-align: middle;
+      padding-top: 5px;
+      padding-bottom: 5px;
+      font-family: $Raleway;
+      font-weight: 600;
+      font-size: 16px;
+      
+    }
+    img{
+      overflow: hidden;
+      height: 125px;
+      margin-top: -45px;
+      margin-left: -40px;
+      margin-right: -30px;
+    }
+  }
 }
