--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  max-width: 320px;
+  width: 320px;
   margin: 0;
 }
 
@@ -177,4 +177,88 @@ h1 {
   border: none;
   color: rgb(255, 255, 255);
   border-radius: 8px;
+}
+
+.cards_section {
+  background: linear-gradient(180deg, rgba(245, 245, 245, 0) 0%, #F5F5F5 51.56%, rgba(245, 245, 245, 0) 100%);
+}
+.cards_section .cards_section,
+.cards_section h2 {
+  text-align: center;
+  font-family: "Abril Fatface", cursive;
+  font-weight: 400;
+  font-size: 24px;
+  padding-left: 30px;
+  padding-right: 30px;
+  letter-spacing: 0.05rem;
+  margin-bottom: 40px;
+}
+
+.whitecard {
+  background-color: #FFFFFF;
+  width: 250px;
+  height: 350px;
+  margin-left: 32px;
+  margin-right: 32px;
+  border-radius: 8px;
+  box-shadow: 0px 28px 64px 12px rgba(0, 0, 0, 0.12);
+  margin-bottom: 30px;
+}
+.whitecard .imagewhitecard {
+  padding-top: 1.5rem;
+  margin-left: 15px;
+  margin-right: 15px;
+  border-bottom: 1px dashed #DBDBDB;
+  padding-bottom: 15px;
+}
+.whitecard .whitecardname {
+  margin-left: 15px;
+  font-family: "Abril Fatface", cursive;
+  letter-spacing: 0.05rem;
+  font-size: 16px;
+}
+.whitecard .whitelist {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 15px;
+  padding-right: 15px;
+  font-size: 12px;
+  font-family: "Raleway", sans-serif;
+  letter-spacing: 0.05rem;
+  margin-bottom: 20px;
+}
+.whitecard .whitelist li:first-child {
+  list-style: none;
+}
+.whitecard .whitecost {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 0px;
+  height: 10px;
+  overflow: unset;
+  height: 50px;
+  margin-left: 20px;
+}
+.whitecard .whitecost p {
+  border: solid 1px;
+  border-radius: 8px;
+  margin: 0;
+  width: 150px;
+  height: 20px;
+  text-align: center;
+  vertical-align: middle;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+}
+.whitecard .whitecost img {
+  overflow: hidden;
+  height: 125px;
+  margin-top: -45px;
+  margin-left: -40px;
+  margin-right: -30px;
 }/*# sourceMappingURL=style.css.map */
