--- a/css/_var.scss
+++ b/css/_var.scss
@@ -14,3 +14,11 @@ $FWhite:#FFFFFF;
 $Abril: 'Abril Fatface', cursive;
 $Raleway:'Raleway', sans-serif ;
 $poppins:'Poppins', sans-serif;
+
+///shadow cards
+
+$Sombreado:0px 28px 64px 12px rgba(0, 0, 0, 0.12);
+
+///input
+$Iborder:1px rgba(255, 255, 255, 1);
+$back: rgba(0, 0, 0, 0.65);
