--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,7 @@ h1 {
   text-align: center;
   letter-spacing: 0.1rem;
   display: flex;
+  margin-right: 15px;
 }
 .second-section .second-section,
 .second-section img {
@@ -180,7 +181,7 @@ h1 {
 }
 
 .cards_section {
-  background: linear-gradient(180deg, rgba(245, 245, 245, 0) 0%, #F5F5F5 51.56%, rgba(245, 245, 245, 0) 100%);
+  background: linear-gradient(180deg, rgba(245, 245, 245, 0) 0%, #f5f5f5 51.56%, rgba(245, 245, 245, 0) 100%);
 }
 .cards_section .cards_section,
 .cards_section h2 {
@@ -194,7 +195,7 @@ h1 {
   margin-bottom: 40px;
 }
 
-.whitecard {
+.whitecard-butterfly {
   background-color: #FFFFFF;
   width: 250px;
   height: 350px;
@@ -204,20 +205,20 @@ h1 {
   box-shadow: 0px 28px 64px 12px rgba(0, 0, 0, 0.12);
   margin-bottom: 30px;
 }
-.whitecard .imagewhitecard {
+.whitecard-butterfly .imagewhitecard {
   padding-top: 1.5rem;
   margin-left: 15px;
   margin-right: 15px;
-  border-bottom: 1px dashed #DBDBDB;
+  border-bottom: 1px dashed #dbdbdb;
   padding-bottom: 15px;
 }
-.whitecard .whitecardname {
+.whitecard-butterfly .whitecardname {
   margin-left: 15px;
   font-family: "Abril Fatface", cursive;
   letter-spacing: 0.05rem;
   font-size: 16px;
 }
-.whitecard .whitelist {
+.whitecard-butterfly .whitelist {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -228,10 +229,10 @@ h1 {
   letter-spacing: 0.05rem;
   margin-bottom: 20px;
 }
-.whitecard .whitelist li:first-child {
+.whitecard-butterfly .whitelist li:first-child {
   list-style: none;
 }
-.whitecard .whitecost {
+.whitecard-butterfly .whitecost {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -241,7 +242,7 @@ h1 {
   height: 50px;
   margin-left: 20px;
 }
-.whitecard .whitecost p {
+.whitecard-butterfly .whitecost p {
   border: solid 1px;
   border-radius: 8px;
   margin: 0;
@@ -255,10 +256,370 @@ h1 {
   font-weight: 600;
   font-size: 16px;
 }
-.whitecard .whitecost img {
+.whitecard-butterfly .whitecost img {
   overflow: hidden;
   height: 125px;
   margin-top: -45px;
   margin-left: -40px;
   margin-right: -30px;
+}
+
+.whitecard-golden {
+  background-color: #FFFFFF;
+  width: 250px;
+  height: 350px;
+  margin-left: 32px;
+  margin-right: 32px;
+  border-radius: 8px;
+  box-shadow: 0px 28px 64px 12px rgba(0, 0, 0, 0.12);
+  margin-bottom: 30px;
+}
+.whitecard-golden .imagen-white-card-gold {
+  padding-top: 1.5rem;
+  margin-left: 15px;
+  margin-right: 15px;
+  border-bottom: 1px dashed #dbdbdb;
+  padding-bottom: 15px;
+}
+.whitecard-golden div h3 {
+  margin-left: 15px;
+  font-family: "Abril Fatface", cursive;
+  font-weight: 400;
+  letter-spacing: 0.05rem;
+  font-size: 16px;
+}
+.whitecard-golden div h3 + .gold-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 15px;
+  padding-right: 15px;
+  font-size: 12px;
+  font-family: "Raleway", sans-serif;
+  letter-spacing: 0.05rem;
+  margin-bottom: 20px;
+}
+.whitecard-golden div h3 + .gold-list li:first-child {
+  list-style: none;
+}
+.whitecard-golden .gold-cost {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 0px;
+  height: 10px;
+  overflow: unset;
+  height: 50px;
+  margin-left: 20px;
+}
+.whitecard-golden .gold-cost p {
+  border: solid 1px;
+  border-radius: 8px;
+  margin: 0;
+  width: 150px;
+  height: 20px;
+  text-align: center;
+  vertical-align: middle;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+}
+.whitecard-golden .gold-cost img {
+  overflow: hidden;
+  height: 125px;
+  margin-top: -45px;
+  margin-left: -40px;
+  margin-right: -30px;
+  padding: 0;
+}
+
+.Whitecard-brown {
+  background-color: #FFFFFF;
+  width: 250px;
+  height: 350px;
+  margin-left: 32px;
+  margin-right: 32px;
+  border-radius: 8px;
+  box-shadow: 0px 28px 64px 12px rgba(0, 0, 0, 0.12);
+  margin-bottom: 30px;
+}
+.Whitecard-brown .imagen-white-card-brown {
+  padding-top: 1.5rem;
+  margin-left: 15px;
+  margin-right: 15px;
+  border-bottom: 1px dashed #dbdbdb;
+  padding-bottom: 5px;
+}
+.Whitecard-brown div h3 {
+  margin-left: 15px;
+  font-family: "Abril Fatface", cursive;
+  font-weight: 400;
+  letter-spacing: 0.05rem;
+  font-size: 16px;
+}
+.Whitecard-brown div h3 + .brown-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  padding-left: 15px;
+  padding-right: 15px;
+  font-size: 12px;
+  font-family: "Raleway", sans-serif;
+  letter-spacing: 0.05rem;
+  margin-bottom: 20px;
+}
+.Whitecard-brown div h3 + .brown-list li:first-child {
+  list-style: none;
+}
+.Whitecard-brown .brown-cost {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 0px;
+  overflow: unset;
+  height: 50px;
+  margin-left: 20px;
+}
+.Whitecard-brown .brown-cost p {
+  border: solid 1px;
+  border-radius: 8px;
+  margin: 0;
+  width: 150px;
+  height: 20px;
+  text-align: center;
+  vertical-align: middle;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 600;
+  font-size: 16px;
+}
+.Whitecard-brown .brown-cost img {
+  overflow: hidden;
+  height: 125px;
+  margin-top: -45px;
+  margin-left: -40px;
+  margin-right: -30px;
+}
+
+.btn-view--flex {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.btn-view--flex button {
+  width: 129px;
+  height: 32px;
+  border-radius: 8px;
+  background-color: #000000;
+  color: rgb(255, 255, 255);
+  font-family: "Raleway", sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  border: none;
+  margin-bottom: 50px;
+}
+
+.section-form-gradient {
+  background: linear-gradient(180deg, #ffffff 0%, rgba(255, 255, 255, 0.35) 100%);
+}
+.section-form-gradient img {
+  margin: 0;
+  width: 100%;
+  position: absolute;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: -1;
+}
+
+div h2 {
+  text-align: center;
+  font-family: "Abril Fatface", cursive;
+  font-weight: 400;
+  font-size: 24px;
+  letter-spacing: 0.05rem;
+  margin-bottom: 25px;
+  position: relative;
+}
+div h2 + p {
+  text-align: center;
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 16px;
+  padding-left: 25px;
+  padding-right: 25px;
+  margin-bottom: 25px;
+  position: relative;
+}
+
+form label {
+  width: 290px;
+  height: 36px;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  letter-spacing: 0.05rem;
+  margin: 0 15px;
+  position: relative;
+}
+form label + input {
+  width: 290px;
+  height: 36px;
+  border: 1px solid white;
+  background-color: rgba(0, 0, 0, 0.65);
+  box-sizing: border-box;
+  border-radius: 4px;
+  margin: 30px 15px;
+  position: relative;
+}
+form label + textarea {
+  width: 290px;
+  height: 148px;
+  border-radius: 4px;
+  border: 1px solid white;
+  background-color: rgba(0, 0, 0, 0.65);
+  margin: 25px 15px;
+  position: relative;
+}
+
+.section-form-gradient button {
+  width: 290px;
+  height: 32px;
+  border-radius: 8px;
+  background-color: #000000;
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 14px;
+  text-align: center;
+  color: rgb(255, 255, 255);
+  margin: 0 15px;
+  margin-bottom: 70px;
+}
+
+.section-form-gradient--partners {
+  background: linear-gradient(177.96deg, #6f6f6f 1.72%, rgba(255, 255, 255, 0.43) 98.63%);
+}
+.section-form-gradient--partners div h3 {
+  margin-top: 0;
+  font-family: "Abril Fatface", cursive;
+  font-weight: 400;
+  font-size: 24px;
+  letter-spacing: 0.05rem;
+  text-align: center;
+}
+.section-form-gradient--partners .div {
+  width: 260px;
+  height: 85px;
+  background-color: #000000;
+  border-radius: 88.9758px 14.2361px 14.2361px 88.9758px;
+  color: rgb(255, 255, 255);
+  border: 1px solid black;
+  display: flex;
+  flex-direction: row;
+  justify-content: first baseline;
+  padding: 7px;
+  margin: auto;
+}
+.section-form-gradient--partners .div h3 {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 0;
+  padding: 0 30px;
+  line-height: 38px;
+}
+.section-form-gradient--partners .div__Bookpa {
+  border-radius: 14.2361px 88.9758px 88.9758px 14.2361px;
+  flex-direction: row-reverse;
+  justify-content: first baseline;
+  margin: 25px 22px;
+}
+
+.footer-gradient {
+  background: linear-gradient(177.96deg, rgba(255, 255, 255, 0.43) 1.72%, #6f6f6f 107.44%);
+}
+.footer-gradient .div-footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.footer-gradient .div-footer img {
+  margin-top: 100px;
+  margin-bottom: 45px;
+}
+.footer-gradient .social-media {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  margin-left: 85px;
+  margin-right: 85px;
+}
+.footer-gradient .social-media a {
+  border: 1px solid #000000;
+  border-radius: 100%;
+  width: 30px;
+  height: 30px;
+  block-size: 28px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  margin: auto;
+}
+.footer-gradient .footer-nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  padding: 0;
+  gap: 10px;
+  margin-top: 55px;
+  font-family: "Poppins", sans-serif;
+  font-size: 12px;
+  font-weight: 500;
+  color: rgb(0, 0, 0);
+  letter-spacing: 0.05rem;
+}
+.footer-gradient .footer-nav li a:visited {
+  text-decoration: none;
+  color: rgb(0, 0, 0);
+}
+.footer-gradient .footer-nav li a {
+  text-decoration: none;
+}
+.footer-gradient .footer-nav li:first-of-type, .footer-gradient .footer-nav li:last-of-type {
+  padding-top: 10px;
+  font-family: "Abril Fatface", cursive;
+  font-size: 14px;
+  padding-bottom: 10px;
+}
+.footer-gradient .text-footer {
+  text-align: center;
+  font-family: "Raleway", sans-serif;
+  font-weight: 300;
+  font-size: 12px;
+  margin-top: -12px;
+  margin-bottom: 20px;
+  margin-left: 10px;
+  margin-right: 10px;
+}
+.footer-gradient .text-footer.address {
+  margin-left: 50px;
+  margin-right: 50px;
+}
+.footer-gradient .brand {
+  font-size: 14px;
+}
+.footer-gradient .pazioli {
+  margin-top: 30px;
+}
+.footer-gradient .koders {
+  margin-bottom: 30px;
+}
+.footer-gradient .koders span {
+  color: transparent;
+  text-shadow: 0 0 0 red;
 }/*# sourceMappingURL=style.css.map */
